--- a/app/src/main/res/values-de/strings_titlebar.xml
+++ b/app/src/main/res/values-de/strings_titlebar.xml
@@ -8,6 +8,7 @@
     <string name="title_bar_bed">Bett: %.1f°</string>
     <string name="title_system_raspberry">Raspberry: %s°</string>
     <string name="title_system_other">System: %s°</string>
+    <string name="title_bar_chamber">Kammer: %.1f°</string>
 
     <string name="title_bar_config_title">Statusleiste Einstellungen</string>
 
@@ -22,7 +23,9 @@
     <string name="title_bar_spinner_change_delay">Wechselgeschwindigkeit (sek)</string>
     <string name="title_bar_toggle_z_height">Z Höhe (mm)</string>
     <string name="title_bar_toggle_system_temperature">Systemtemperatur (°)</string>
+    <string name="title_bar_toggle_hot_chamber">Kammer-Temperatur anzeigen</string>
 
+    <string name="title_bar_toggle_hot_chamber_tip">Kammer-Temperatur anzeigen. in der Titelleiste</string>
     <string name="title_bar_toggle_server_name_tip">Servername anzeigen in der Titelleiste</string>
     <string name="title_bar_toggle_printer_state_tip">Serverstatus anzeigen in der Titelleiste</string>
     <string name="title_bar_toggle_extruders_temp_tip">Extruder-Temperaturen anzeigen in der Titelleiste</string>
