--- a/app/src/main/res/values-nl/strings_titlebar.xml
+++ b/app/src/main/res/values-nl/strings_titlebar.xml
@@ -8,6 +8,7 @@
     <string name="title_bar_bed">Bed %.1f°</string>
     <string name="title_system_raspberry">Raspberry: %s°</string>
     <string name="title_system_other">Systeem: %s°</string>
+    <string name="title_bar_chamber">Kamer: %.1f°</string>
 
     <string name="title_bar_config_title">Titel balk configuratie</string>
 
@@ -22,7 +23,9 @@
     <string name="title_bar_spinner_change_delay">Vertraging wisseling (sec)</string>
     <string name="title_bar_toggle_z_height">Z hoogte (mm)</string>
     <string name="title_bar_toggle_system_temperature">Systeem temperatuur (°)</string>
+    <string name="title_bar_toggle_hot_chamber">Temperatuur kamer</string>
 
+    <string name="title_bar_toggle_hot_chamber_tip">Temperatuur kamer in de titelbalk</string>
     <string name="title_bar_toggle_server_name_tip">Server naam in de titelbalk</string>
     <string name="title_bar_toggle_printer_state_tip">Server toestand in de titelbalk</string>
     <string name="title_bar_toggle_extruders_temp_tip">Temperatuur extruders in de titelbalk</string>
