--- a/app/src/main/res/values-es/strings_tools.xml
+++ b/app/src/main/res/values-es/strings_tools.xml
@@ -14,17 +14,20 @@
     <string name="printer_head_level">Extrusor\n%d°</string>
     <string name="printer_headX_level">Extrusor %1$d\n%2$d°</string>
     <string name="hot_bed_level">Cama\n%d°</string>
+    <string name="chamber_level">Cámara\n%d°</string>
     <string name="fan_level">Ventilador\n%d%%</string>
     <string name="fan_level_index">Ventilador %1$d\n%2$d%%</string>
 
-    <string name="printer_head_level_off">Extrusor\nAPAGADO</string>
-    <string name="printer_headX_level_off">Extrusor %d\nAPAGADO</string>
-    <string name="hot_bed_level_off">Cama\nAPAGADO</string>
-    <string name="fan_level_off">Ventilador\nAPAGADO</string>
-    <string name="fan_level_index_off">Ventilador %d\nAPAGADO</string>
+    <string name="printer_head_level_off">Extrusor\nOFF</string>
+    <string name="printer_headX_level_off">Extrusor %d\nOFF</string>
+    <string name="hot_bed_level_off">Cama\nOFF</string>
+    <string name="chamber_level_off">Cámara\nOFF</string>
+    <string name="fan_level_off">Ventilador\nOFF</string>
+    <string name="fan_level_index_off">Ventilador %d\nOFF</string>
 
     <string name="input_headX_level">Extrusor %d (°)</string>
     <string name="input_bed_level">Cama (°)</string>
+    <string name="input_chamber_level">Cámara (°)</string>
     <string name="input_fan_level">Nivel ventilador %d (%%)</string>
 
     <string name="input_feedrate">Avance (%)</string>
