--- a/app/src/main/res/values-nl/strings_tools.xml
+++ b/app/src/main/res/values-nl/strings_tools.xml
@@ -14,17 +14,20 @@
     <string name="printer_head_level">Extruder\n%d°</string>
     <string name="printer_headX_level">Extruder %1$d\n%2$d°</string>
     <string name="hot_bed_level">Bed\n%d°</string>
+    <string name="chamber_level">Kamer\n%d°</string>
     <string name="fan_level">Ventilator\n%d%%</string>
     <string name="fan_level_index">Ventilator %1$d\n%2$d%%</string>
 
     <string name="printer_head_level_off">Extruder\nUIT</string>
     <string name="printer_headX_level_off">Extruder %d\nUIT</string>
     <string name="hot_bed_level_off">Bed\nUIT</string>
+    <string name="chamber_level_off">Kamer\nUIT</string>
     <string name="fan_level_off">Ventilator\nUIT</string>
     <string name="fan_level_index_off">Ventilator %d\nUIT</string>
 
     <string name="input_headX_level">Extruder %d (°)</string>
     <string name="input_bed_level">Bed (°)</string>
+    <string name="input_chamber_level">Kamer (°)</string>
     <string name="input_fan_level">Ventilator %d (%%)</string>
 
     <string name="input_feedrate">Feed rate (%)</string>
