--- a/app/src/main/res/values-pt/strings_tools.xml
+++ b/app/src/main/res/values-pt/strings_tools.xml
@@ -14,17 +14,20 @@
     <string name="printer_head_level">Extrusora\n%d°</string>
     <string name="printer_headX_level">Extrusora %1$d\n%2$d°</string>
     <string name="hot_bed_level">Mesa\n%d°</string>
+    <string name="chamber_level">Câmara\n%d°</string>
     <string name="fan_level">Ventoinha\n%d%%</string>
     <string name="fan_level_index">Ventoinha %1$d\n%2$d%%</string>
 
     <string name="printer_head_level_off">Extrusora\nFORA</string>
     <string name="printer_headX_level_off">Extrusora %d\nFORA</string>
     <string name="hot_bed_level_off">Mesa\nFORA</string>
+    <string name="chamber_level_off">Câmara\nFORA</string>
     <string name="fan_level_off">Ventoinha\nFORA</string>
     <string name="fan_level_index_off">Ventoinha %d\nFORA</string>
 
     <string name="input_headX_level">Extrusora %d (°)</string>
     <string name="input_bed_level">Mesa (°)</string>
+    <string name="input_chamber_level">Câmara (°)</string>
     <string name="input_fan_level">Ventoinha %d (%%)</string>
 
     <string name="input_feedrate">Taxa de alimentação (%)</string>
