--- a/app/src/main/res/values-ru/strings_settings.xml
+++ b/app/src/main/res/values-ru/strings_settings.xml
@@ -125,7 +125,7 @@
     <string name="setting_enable_baby_stepping">Включить Baby Stepping</string>
     <string name="settings_octoprint_credentials">Учетные данные сервера OctoPrint</string>
     <string name="setting_enable_hot_chamber">Включить управление камерой с подогревом</string>
-    <string name="setting_max_chamber_temp">Макс. Температура нагреваемой камеры.</string>
+    <string name="setting_max_chamber_temp">Макс. Температура нагреваемой камеры</string>
 
     <string name="setting_enable_hot_chamber_tip">Отрегулируйте и покажите температуру нагретой камеры</string>
     <string name="setting_max_chamber_temp_tip">Максимальная температура для камеры с подогревом</string>
