--- a/app/src/main/res/values-it/strings_keyboard.xml
+++ b/app/src/main/res/values-it/strings_keyboard.xml
@@ -34,6 +34,8 @@
     <string name="keyboard_action_decrement_ext">diminuisci temperatura ext.%d</string>
     <string name="keyboard_action_increment_bed">aumenta temperatura piatto</string>
     <string name="keyboard_action_decrement_bed">diminuisci temperatura piatto</string>
+    <string name="keyboard_action_increment_chamber">aumenta temperatura camera</string>
+    <string name="keyboard_action_decrement_chamber">diminuisci temperatura camera</string>
     <string name="keyboard_action_select_tool">seleziona strumento %d</string>
     <string name="keyboard_action_print">seleziona file da stampare</string>
     <string name="keyboard_action_pause">stampante in pausa</string>
